--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=ja
+APP_FALLBACK_LOCALE=ja
+APP_TIMEZONE=Asia/Tokyo
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
